.npmrcを追加し、index.htmlに見出しを追加しました。また、tailwind.config.tsからテーマ設定を削除し、vercel.jsonの不要な設定を整理しました。

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.tailwindcss.com" defer></script>
 </head>
 <body>
+  <h1 class="sr-only">DDD学習用Todoアプリ</h1>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
