READMEとindex.htmlのデモリンクを新しいURLに更新しました。

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta property="og:title" content="DDD学習用Todoアプリ" />
   <meta property="og:description" content="ドメイン駆動設計（DDD）の概念を実践的に学ぶためのTodoアプリケーション" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://ddd-todo-app.vercel.app/" />
-  <meta property="og:image" content="https://ddd-todo-app.vercel.app/api/og" />
+  <meta property="og:url" content="https://ddd-layered-rchitecture.vercel.app/" />
+  <meta property="og:image" content="https://ddd-layered-rchitecture.vercel.app/api/og" />
   <meta property="og:site_name" content="DDD学習用Todoアプリ" />
   <meta name="twitter:card" content="summary_large_image" />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
